Uploading functional javascript stuff
* added opacity to images

* can click anywhere to open/close

* Checkmarks work, must be checked in order, data is stored via cache

* cookies work

* Events now handle properly of firefox

* sections have unique ids, current week opens on page load

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>FDD Checklist</title>
 
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	
 	<link href = "css/custom.css" rel ="stylesheet">
+
 </head>
 <body>
 	<div class = "title-image-space">
@@ -16,7 +21,7 @@
 	<h1 class = "main-title-sub">Making the Jump from Applicant to Franchise Owner</h1>
 
 	<!-- WEEK 1  -->
-	<div class = "week-section">
+	<div class = "week-section" id="week-1" onclick="tgl(this.id,event)">
 		<button class = "btn btn-xl collapse-button" data-toggle="collapse" data-target="#inner1">+</button>
 		<h1 class = "week-section-title">Step 1 - Week 1</h1>
 		<h1 class = "week-section-sub1">Apply! You did that already YAY YOU!</h1>
@@ -24,45 +29,45 @@
 		<div id = "inner1" class = "collapse">
 			<h1 class = "week-section-sub2">Your Week 1 Checklist:</h1>
 
-			<div class = "week-section-item week-1-a">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-a">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = ""/>
 				<a href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
 			</div>
 
-			<div class = "week-section-item week-1-b">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-b">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>b. Start following us on FB, Youtube, instagram, pinterest, & twitter to join our community of amazing Mamas!</p>
 					<a href = "https://www.facebook.com/HotMamaHealthFitness/" class = "btn btn-default btn-md pad-20">F</a>
-					<a href = "https://twitter.com/hotmamafit" class = "btn btn-default btn-md pad-20 margin-left-20">Y</a>
-					<a href = "https://www.instagram.com/hotmamafit.hq/" class = "btn btn-default btn-md pad-20 margin-left-20">i</a>
-					<a href = "https://www.youtube.com/channel/UCEInntjK0XCJluUaQMQ-OJw" class = "btn btn-default btn-md pad-20 margin-left-20">p</a>
-					<a href = "https://www.pinterest.com/hotmamafit/" class = "btn btn-default btn-md pad-20 margin-left-20">t</a>
+					<a href = "https://www.youtube.com/channel/UCEInntjK0XCJluUaQMQ-OJw" class = "btn btn-default btn-md pad-20 margin-left-20">Y</a>
+					<a href = "https://www.instagram.com/hotmamafit.hq/" class = "btn btn-default btn-md pad-20 margin-left-20">I</a>
+					<a href = "https://www.pinterest.com/hotmamafit/" class = "btn btn-default btn-md pad-20 margin-left-20">P</a>
+					<a href = "https://twitter.com/hotmamafit" class = "btn btn-default btn-md pad-20 margin-left-20">T</a>
 			</div>
 
-			<div class = "week-section-item week-1-c">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-c">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>c. Join our newsletter to keep in the Hot Mama loop and receive exclusive discounts on classes, retreats and other hot swag!</p>
 			</div>
 
-			<div class = "week-section-item week-1-d">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-d">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>d. Go to a Hot Mama class if you can get to one in your area!</p>
 			</div>
 
 			<a href = "#" class = "btn btn-default btn-md">Click to find your nearest Hot Mama location</a>
 
-			<div class = "week-section-item week-1-e">
+			<div class = "week-section-item" id="week-1-e">
 				<img src = "images/ignitelogo_PB_nosub.svg">
 				<p>e. Redeem your coupon for $50 OFF Hot Mama's newest 28-day at-home fitness program IGNITE: Fuel, Flash, Burn, or Torch!<br>(expires in 7 days - go Mama, go!)</p>
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 			</div>
 		</div> <!-- End Inner -->
 	</div> <!-- End week-section -->
 
 
 	<!-- WEEK 2  -->
-	<div class = "week-section">
+	<div class = "week-section" id="week-2" onclick="tgl(this.id,event)">
 
 		<button class = "btn btn-xl collapse-button" data-toggle="collapse" data-target="#inner2">+</button>
 		<h1 class = "week-section-title">Step 2 - Week 2</h1>
@@ -70,14 +75,14 @@
 		<div id = "inner2" class = "collapse">
 			<h1 class = "week-section-sub2">Your Week 2 Checklist:</h1>
 
-			<div class = "week-section-item week-2-a">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-2-a">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = "images/original-superohm.png"/>
-				<p>a. Schedule a video call and have your "Meet the OHM" interview!</p></a>
+				<p>a. Schedule a video call and have your "Meet the OHM" interview!</p>
 			</div>
 			
-			<div class = "week-section-item week-1-b">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-b">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>b. Receive, sign, and send back your Confidentiality Agreement so that we can share more info with you!</p>
 			</div>
 
@@ -86,26 +91,26 @@
 				<button class = "btn btn-lg btn-blue">Click here to provide your Legal name and address for your CA</button>
 			</div>
 
-			<div class = "week-section-item week-2-c">
+			<div class = "week-section-item" id="week-2-c">
 				<img src="images/original-gradedtest.png"/>
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>c. Learn and study our <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1278433/original-1_hotmamasclassdescriptions.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470963096&Signature=mUN%2F6Qt5%2BmNtOD9BzwBwAq19ifU%3D">class descriptions</a>, <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1278437/original-2_classpricing.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470962995&Signature=p26LyjuN114Ic%2FEoYNDEJlrxmiw%3D">pricing</a>, <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1424349/original-firstyearclassscheduleexample_8-5x11.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470963375&Signature=aVdog%2Brwq3IwWmCjpZm06sJBt9Q%3D">schedule example</a>, and <a href = "https://s3.amazonaws.com/res.wixpulse.com/184704/resources/1424350/original-firstyearbudgetsuggestions.pdf?AWSAccessKeyId=AKIAJA6K3EEY55MVMVBQ&Expires=1470963437&Signature=klP%2BlIOBNm7uN5UnqnmKCnUwrBU%3D">budgets</a>.</p>
 			</div>
 
-			<div class = "week-section-item week-1-d">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-d">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<a href = "#"><p>d. Pass our short quiz about webinar content. Click here for our quiz</p></a>
 			</div>
 
-			<div class = "week-section-item week-2-e">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-2-e">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = "images/original-supererin.png"/>
 				<img src = "images/original-videocall.png">
 				<p>e. Meet with Erin, our Business Guru, via video call to answer your questions and talk Hot Mama business</p>
 			</div>
 
-			<div class = "week-section-item week-2-e">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-2-f">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>f. Start thinking about your franchise location name and select your population size.</p>
 				<img src = "images/original-opal.png"><img src = "images/original-onyx.png"><img src = "images/original-quartz.png">
 			</div>
@@ -113,7 +118,7 @@
 	</div>
 
 	<!-- WEEK 3  -->
-	<div class = "week-section">
+	<div class = "week-section" id="week-3" onclick="tgl(this.id,event)">
 		<button class = "btn btn-xl collapse-button" data-toggle="collapse" data-target="#inner3">+</button>
 		<h1 class = "week-section-title">Step 3 - Week 3</h1>
 		<h1 class = "week-section-sub1">It's time for Hot Mama culture and legalese!</h1>
@@ -121,32 +126,32 @@
 		<div id = "inner3" class = "collapse">
 			<h1 class = "week-section-sub2">Your Week 3 Checklist:</h1>
 
-			<div class = "week-section-item week-3-a">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-3-a">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<a href = "https://hotmamafit.youcanbook.me/"><p>a. Book your Intro to FDD call with Erin to discuss the Franchise Disclosure Document (FDD)</p></a>
 			</div>
 
 			<!-- TODO: ENTER BUTTON FOR ACCEPTING CODE AND GIVING FDD DOCUMENT -->
 
-			<div class = "week-section-item week-3-b">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-3-b">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = "images/original-legalpapers.png">
 				<p>b. Sign & send back your receipit of the FDD</p>
 			</div>
 
-			<div class = "week-section-item week-3-c">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-3-c">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<a href = "https://www.commissionaires.ca/en/national/service/individual/electronic-criminal-record-checks"><p>c. Suppy a Criminal Record Check</p></a>
 			</div>
 
-			<div class = "week-section-item week-3-d">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-3-d">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>d. Watch your surprise video from the "OHM!" </p>
 				<iframe width="500" height="294" src="https://www.youtube.com/embed/HP_GKBizK0w" frameborder="0" allowfullscreen></iframe>
 			</div>
 
-			<div class = "week-section-item week-3-e">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-3-e">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>immerse yourself in the Hot Mama culture...learn, learn, learn!</p>
 			</div>
 			<div class = "center">
@@ -158,7 +163,7 @@
 	</div> <!-- End week-section -->
 
 	<!-- WEEK 4/5 -->
-	<div class = "week-section">
+	<div class = "week-section" id="week-45" onclick="tgl(this.id,event)">
 		<button class = "btn btn-xl collapse-button" data-toggle="collapse" data-target="#inner45">+</button>
 		<h1 class = "week-section-title">Step 1 - Week 1</h1>
 		<h1 class = "week-section-sub1">Apply! You did that already YAY YOU!</h1>
@@ -166,14 +171,14 @@
 		<div id = "inner45" class = "collapse">
 			<h1 class = "week-section-sub2">Your Week 1 Checklist:</h1>
 
-			<div class = "week-section-item week-1-a">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-a">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = ""/>
 				<a href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
 			</div>
 
-			<div class = "week-section-item week-1-b">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-b">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>b. Start following us on FB, Youtube, instagram, pinterest, & twitter to join our community of amazing Mamas!</p>
 					<a href = "https://www.facebook.com/HotMamaHealthFitness/" class = "btn btn-default btn-md pad-20">F</a>
 					<a href = "https://twitter.com/hotmamafit" class = "btn btn-default btn-md pad-20 margin-left-20">Y</a>
@@ -182,28 +187,28 @@
 					<a href = "https://www.pinterest.com/hotmamafit/" class = "btn btn-default btn-md pad-20 margin-right-10 margin-left-10">t</a>
 			</div>
 
-			<div class = "week-section-item week-1-c">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-c">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>c. Join our newsletter to keep in the Hot Mama loop and receive exclusive discounts on classes, retreats and other hot swag!</p>
 			</div>
 
-			<div class = "week-section-item week-1-d">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-d">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>d. Go to a Hot Mama class if you can get to one in your area!</p>
 			</div>
 
 			<a href = "#" class = "btn btn-default btn-md">Click to find your nearest Hot Mama location</a>
 
-			<div class = "week-section-item week-1-e">
+			<div class = "week-section-item" id="week-1-e">
 				<img src = "images/ignitelogo_PB_nosub.svg">
 				<p>e. Redeem your coupon for $50 OFF Hot Mama's newest 28-day at-home fitness program IGNITE: Fuel, Flash, Burn, or Torch!<br>(expires in 7 days - go Mama, go!)</p>
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 			</div>
 		</div> <!-- End Inner -->
 	</div> <!-- End week-section -->
 
 	<!-- WEEK 6  -->
-	<div class = "week-section">
+	<div class = "week-section" id="week-6" onclick="tgl(this.id,event)">
 		<button class = "btn btn-xl collapse-button" data-toggle="collapse" data-target="#inner6">+</button>
 		<h1 class = "week-section-title">Step 1 - Week 1</h1>
 		<h1 class = "week-section-sub1">Apply! You did that already YAY YOU!</h1>
@@ -211,14 +216,14 @@
 		<div id = "inner6" class = "collapse">
 			<h1 class = "week-section-sub2">Your Week 1 Checklist:</h1>
 
-			<div class = "week-section-item week-1-a">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-a">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<img src = ""/>
-				<a style = "color: white;"href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
+				<a style = "color:white;" href = "https://jill3.youcanbook.me/"><p>a. Have your Meet & Greet with Jill, Hot Mama's Original Mentor</p></a>
 			</div>
 
-			<div class = "week-section-item week-1-b">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-b">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>b. Start following us on FB, Youtube, instagram, pinterest, & twitter to join our community of amazing Mamas!</p>
 					<a href = "https://www.facebook.com/HotMamaHealthFitness/" class = "btn btn-default btn-md pad-20">F</a>
 					<a href = "https://twitter.com/hotmamafit" class = "btn btn-default btn-md pad-20 margin-left-20">Y</a>
@@ -227,28 +232,28 @@
 					<a href = "https://www.pinterest.com/hotmamafit/" class = "btn btn-default btn-md pad-20 margin-left-20">t</a>
 			</div>
 
-			<div class = "week-section-item week-1-c">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-c">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>c. Join our newsletter to keep in the Hot Mama loop and receive exclusive discounts on classes, retreats and other hot swag!</p>
 			</div>
 
-			<div class = "week-section-item week-1-d">
-				<button class = "btn btn-lg checkmark"></button>
+			<div class = "week-section-item" id="week-1-d">
+				<button class = "btn btn-lg checkmark not-checked"></button>
 				<p>d. Go to a Hot Mama class if you can get to one in your area!</p>
 			</div>
 
 			<a href = "#" class = "btn btn-default btn-md">Click to find your nearest Hot Mama location</a>
 
-			<div class = "week-section-item week-1-e">
+			<div class = "week-section-item" id="week-1-e">
 				<img src = "images/ignitelogo_PB_nosub.svg">
 				<p>e. Redeem your coupon for $50 OFF Hot Mama's newest 28-day at-home fitness program IGNITE: Fuel, Flash, Burn, or Torch!<br>(expires in 7 days - go Mama, go!)</p>
-				<button class = "btn btn-lg checkmark"></button>
+				<button class = "btn btn-lg checkmark not-checked"></button>
 			</div>
 		</div> <!-- End Inner -->
 	</div> <!-- End week-section -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+	<script src="js/functions.js"></script>
 </body>
 </html>
